fix alignment to stretch

--- a/style_index.css
+++ b/style_index.css
@@ -220,6 +220,7 @@ body {
 .testimonial {
   text-align: center;
   flex: 1;
+  align-self: stretch;
   margin: 10px;
   padding: 20px;
   background-color: var(--primary2_color);
